fixed scrollbar, small cosmetic chgs

--- a/tigerapps/static/pom/css/map.css
+++ b/tigerapps/static/pom/css/map.css
@@ -16,15 +16,14 @@ ul {
 	padding: 0;
 }
 
-a:link{
+a:link, a:visited{
 	color:#FF6600;
-	}
-a:visited{
-	color:#FF6600;
-	}
+}
 a:hover{
 	color:#000000;
-	}
+}
+
+
 /*************/
 /* Left panel */
 /*************/
@@ -61,10 +60,11 @@ a:hover{
 	height: 0px;
 	margin-left: 15px;
 	margin-right: 3px;
+	border-top: 1px solid #C0C0C0;
 }
 #info-bot {
 	height: 0px;
-	overflow: hidden;
+	overflow-y: auto;
 	margin:15px 5px 15px 20px;
 }
 
@@ -76,9 +76,8 @@ a:hover{
 	margin-bottom:10px;
 }
 .info-event-entry {
-	padding:0px 0px 8px;
+	padding:0px 12px 8px 0;
 	margin-right: 5px;
-	/*color: red;*/
 }
 .info-event-subtitle {
 	/*margin-left: 5px;*/
